<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="inclass08_group24.mihai.example.com.inclass08_group24.MovieByYearFragment">


    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp">

            <TextView
                android:text="@string/text_moviesbyyear2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:id="@+id/textView7_rating"
                tools:text="@string/text_moviesbyyear"
                android:textAlignment="center"
                android:textStyle="normal|bold"
                android:textSize="16sp"
                android:padding="15dp" />

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingBottom="15dp"
                android:paddingTop="15dp">

                <TextView
                    android:text="@string/text_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView8_rating"
                    android:layout_weight="1"
                    android:textAlignment="viewStart"
                    android:textStyle="normal|bold" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/textName"
                    android:layout_weight="1" />
            </LinearLayout>

            <TextView
                android:text="@string/text_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/textView8_rating"
                android:layout_marginTop="13dp"
                android:id="@+id/textView10_rating"
                android:textStyle="normal|bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:id="@+id/editTextDescription"
                android:padding="5dp" />

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/genreLayout"
                android:paddingTop="15dp"
                android:paddingBottom="15dp">

                <TextView
                    android:text="@string/text_genre"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/textDescription_rating"
                    android:id="@+id/textView11_rating"
                    android:layout_weight="1"
                    android:textStyle="normal|bold" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/textGenre"
                    android:layout_above="@+id/textView13_rating"
                    android:layout_weight="1" />
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/ratingLayout"
                android:paddingBottom="15dp"
                android:paddingTop="15dp">

                <TextView
                    android:text="@string/text_Byyear_rating"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/textView11_rating"
                    android:id="@+id/textView13_rating"
                    tools:text="@string/text_rating"
                    android:layout_weight="1"
                    android:textStyle="normal|bold" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/textRating"
                    android:layout_alignBaseline="@+id/textView13_rating"
                    android:layout_alignBottom="@+id/textView13_rating"
                    android:layout_weight="1" />
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/yearLayout"
                android:paddingBottom="15dp"
                android:paddingTop="15dp">

                <TextView
                    android:text="@string/text_year"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/textView13_rating"
                    android:id="@+id/textView15_rating"
                    android:layout_weight="1"
                    android:textStyle="normal|bold" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/textYear"
                    android:layout_alignBaseline="@+id/textView15_rating"
                    android:layout_alignBottom="@+id/textView15_rating"
                    android:layout_weight="1" />
            </LinearLayout>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/imdb"
                android:paddingTop="15dp"
                android:paddingBottom="15dp">

                <TextView
                    android:text="@string/text_imdb"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:id="@+id/textView17_rating"
                    android:layout_weight="1"
                    android:textStyle="normal|bold" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/textView17_rating"
                    android:id="@+id/textIMDB"
                    android:layout_weight="1" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:id="@+id/buttonLayout">

            <Button
                android:text="| &lt;"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignTop="@+id/buttonratePrev"
                android:layout_alignRight="@+id/textViewRate"
                android:layout_alignEnd="@+id/textViewRate"
                android:id="@+id/buttonrateFirst"
                style="@style/Widget.AppCompat.Button.Small" />

            <Button
                android:text="&lt;"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/buttonratefinish"
                android:layout_toLeftOf="@+id/textView8"
                android:layout_toStartOf="@+id/textView8"
                android:id="@+id/buttonratePrev"
                style="@style/Widget.AppCompat.Button.Small" />

            <Button
                android:text="@string/button_finish"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/button_rating"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:layout_weight="1"
                android:textStyle="normal|bold" />

            <Button
                android:text="&gt;"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/buttonrateNext"
                style="@style/Widget.AppCompat.Button.Small"
                android:layout_alignBaseline="@+id/buttonratefinish"
                android:layout_alignBottom="@+id/buttonratefinish"
                android:layout_toRightOf="@+id/textView8"
                android:layout_toEndOf="@+id/textView8" />

            <Button
                android:text="&gt; |"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/buttonrateLast"
                android:layout_alignTop="@+id/buttonrateNext"
                android:layout_toRightOf="@+id/buttonrateNext"
                android:layout_toEndOf="@+id/buttonrateNext"
                style="@style/Widget.AppCompat.Button.Small" />


        </LinearLayout>
    </LinearLayout>


</FrameLayout>
