<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.mihai.inclass08_group24.AddFragment">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/activity_add_movie"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context="com.fav.movie.my_favorite_movies.AddMovieActivity">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginLeft="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="14dp"
            android:id="@+id/textView2"
            android:text="@string/label_name" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:layout_alignParentTop="true"
            android:layout_toRightOf="@+id/textView2"
            android:layout_toEndOf="@+id/textView2"
            android:layout_marginLeft="28dp"
            android:layout_marginStart="28dp"
            android:maxLength="50"
            android:id="@+id/editTextMovieName" />

        <TextView
            android:text="@string/label_desc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/editTextMovieName"
            android:layout_alignLeft="@+id/textView2"
            android:layout_alignStart="@+id/textView2"
            android:layout_marginTop="11dp"
            android:id="@+id/textView3" />

        <TextView
            android:text="@string/label_genre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/editTextDesc"
            android:layout_alignLeft="@+id/editTextDesc"
            android:layout_alignStart="@+id/editTextDesc"
            android:layout_marginTop="47dp"
            android:maxLength="1000"
            android:id="@+id/textView4" />

        <Spinner
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/textView4"
            android:layout_toRightOf="@+id/textView3"
            android:layout_toEndOf="@+id/textView3"
            android:id="@+id/spinnerGenre" />

        <TextView
            android:text="Rating : "
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_alignLeft="@+id/textView4"
            android:layout_alignStart="@+id/textView4"
            android:id="@+id/textView5" />

        <SeekBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/textView5"
            android:layout_alignLeft="@+id/spinnerGenre"
            android:layout_alignStart="@+id/spinnerGenre"
            android:id="@+id/seekBarRating"
            android:layout_alignRight="@+id/editTextDesc"
            android:layout_alignEnd="@+id/editTextDesc"
            android:max="5" />

        <TextView
            android:text="@string/label_year"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/seekBarRating"
            android:layout_alignLeft="@+id/textView5"
            android:layout_alignStart="@+id/textView5"
            android:layout_marginTop="35dp"
            android:id="@+id/textView6" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:ems="10"
            android:layout_below="@+id/seekBarRating"
            android:layout_alignLeft="@+id/seekBarRating"
            android:layout_alignStart="@+id/seekBarRating"
            android:layout_marginTop="20dp"
            android:maxLength="4"
            android:id="@+id/editTextYear" />

        <TextView
            android:text="IMDB : "
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/editTextYear"
            android:layout_alignLeft="@+id/textView6"
            android:layout_alignStart="@+id/textView6"
            android:layout_marginTop="18dp"
            android:id="@+id/textView7" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:layout_below="@+id/editTextYear"
            android:layout_alignLeft="@+id/editTextYear"
            android:layout_alignStart="@+id/editTextYear"
            android:id="@+id/editTextImdbLink" />

        <Button
            android:text="@string/btn_add_movie"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/editTextImdbLink"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="24dp"
            android:id="@+id/buttonAddMovie" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textMultiLine"
            android:ems="10"
            android:id="@+id/editTextDesc"
            android:layout_below="@+id/textView3"
            android:layout_alignLeft="@+id/textView3"
            android:layout_alignStart="@+id/textView3"
            android:layout_alignRight="@+id/editTextMovieName"
            android:layout_alignEnd="@+id/editTextMovieName" />

    </RelativeLayout>

</FrameLayout>
